# the-green-papaya

./: .gitignore  README.md
api/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
api/api/: settings.py  urls.py
api/bookclub/: models.py  serializers.py  urls.py  views.py
api/bookclub/migrations/: 0001_initial.py
frontend/: fly.toml  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
